tdf#134562 Added check for textnode

Change-Id: I0a38de547747f04a61a66c9ef62e59a68c4e1826
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98225
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>